--- a/client/src/css/SectionContainer.css
+++ b/client/src/css/SectionContainer.css
@@ -4,12 +4,18 @@
 }
 
 .box_elements {
-  flex-grow: 0.5;
-  flex-basis: 200;
+  flex-grow: 1;
   background-color: antiquewhite;
   border-radius: 5px;
-  height: 110px;
   text-align: center;
-  padding-top: 10px;
   border: 1px solid darkgrey;
+  height: 75px;
+}
+
+.count {
+  font-size: 1rem;
+}
+
+.status {
+  font-size: 12px;
 }
