--- a/client/src/css/SectionContainer.css
+++ b/client/src/css/SectionContainer.css
@@ -1,11 +1,12 @@
 .box-container {
   display: flex;
   flex-wrap: wrap;
+  color: white;
 }
 
 .box_elements {
   flex-grow: 1;
-  background-color: antiquewhite;
+  background-color: grey;
   border-radius: 5px;
   text-align: center;
   border: 1px solid darkgrey;
